# VirtualTM

./: .gitignore  AUTHORS  README.md  meson.build  meson.options
src/: application.c  client.vala  config.vapi  daemon.vala  database.vala  endpoint.vala  main.c  main.vala  meson.build  models.vala  notifier.vala  server.vala
